Revise README for improved clarity and structure
Updated the README to improve clarity and organization of features, technologies, and project structure.